# vgc-bench

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  MCP_INTEGRATION.md  README.md  eval.sh  heatmaps.py  kill.sh  mise.toml  parallel_train.sh  pretrain.sh  pyproject.toml  requirements.txt  run.py  run.sh  train.sh  update-path.sh  update_path.sh
dexter/: eval.py  logs2trajs.py  play.py  pretrain.py  scrape_data.py  scrape_logs.py  train.py
dexter/src/: agent.py  callback.py  constants.py  data.py  env.py  llm.py  policy.py  reader.py  teams.py  utils.py
src/: agent.py  basic_player.py  buffer.py  callback.py  constants.py  data.py  env.py  environment.py  eval.py  experience.py  human.py  listen.py  nn.py  play.py  policy.py  run.py  teams.py  train.py  train_step.py  utils.py
vgc_bench/: logs2trajs.py  play.py  pretrain.py  train.py
vgc_bench/src/: callback.py  env.py  utils.py
