[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "UT_masters_thesis"
version = "0.1.0"
authors = [{ name = "Cameron Angliss", email = "cameronangliss99@gmail.com" }]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
