[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "UT_masters_thesis"
version = "0.1.0"
authors = [{ name = "Cameron Angliss", email = "cameronangliss99@gmail.com" }]

[tool.black]
line-length = 100
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pyright]
include = ["vgc_bench"]
pythonVersion = "3.12"
reportPrivateUsage = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
